@@ -223,6 +223,8 @@
 \alias{appendFullNamesTranslatorByTabularTextFileSet.GenericDataFileSet}
 \alias{sortBy}
 \alias{getTags.Arguments}
+\alias{dropRootPathTags}
+\alias{dropRootPathTags.default}
 
 \description{
   This page contains aliases for all "non-documented" objects that
