@@ -2,6 +2,7 @@ Package: R.filesets
 ===================
 
 Version: 0.9.4 [2011-02-24]
+o Added dropRootPathTags().
 o GENERALIZATION: Added support to findByName() for GenericDataFileSet
   such that root paths also can be specified by simple regular expression
   (still via argument 'paths').  Currently it is only the last 
